# csv_transcript_segmenter

./: .gitignore  README.md  demo.py  pyproject.toml
data/: demo.csv
src/: c99_segmenter.py
