[project]
name = "csv-transcript-segmenter"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Xia",email = "115516639+Benlitzie@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.8.1,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
